# dexter-agentic-netops

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.agents/skills/dexter/: SKILL.md
.agents/skills/dexter/agents/: openai.yaml
.agents/skills/dexter/skills/catalyst-center/: SKILL.md
.agents/skills/dexter/skills/catalyst-center/scripts/: handler.py
.agents/skills/dexter/skills/github-explorer/: SKILL.md
.agents/skills/dexter/skills/github-explorer/scripts/: handler.py
.agents/skills/dexter/skills/juniper-mist/: SKILL.md
.agents/skills/dexter/skills/juniper-mist/scripts/: handler.py
.agents/skills/dexter/skills/servicenow-csv-dns/: SKILL.md
.agents/skills/dexter/skills/servicenow-csv-dns/scripts/: handler.py
.agents/skills/dexter/skills/servicenow-dns/: SKILL.md
.agents/skills/dexter/skills/servicenow-dns/scripts/: handler.py
.agents/skills/dexter/skills/servicenow-network-gear/: SKILL.md
.agents/skills/dexter/skills/servicenow-network-gear/scripts/: handler.py
.agents/skills/dexter/skills/servicenow-query/: SKILL.md
.agents/skills/dexter/skills/servicenow-query/scripts/: handler.py
.claude/skills/: dexter
scripts/: dexter  test
tests/: __init__.py  load_handler.py
tests/catalyst_center/: test_handler.py
tests/juniper_mist/: test_handler.py
tests/servicenow_csv_dns/: test_handler.py
tests/servicenow_dns/: test_handler.py
tests/servicenow_network_gear/: test_handler.py
tests/servicenow_query/: test_handler.py
