[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dexter-agentic-netops"
version = "0.1.0"
description = "Portable, guarded Agent Skills for AI-assisted network operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "dnacentersdk>=2.11,<3",
  "python-dotenv>=1.0,<2",
  "requests>=2.32,<3",
  "urllib3>=2,<3",
]

[tool.setuptools]
py-modules = []
